# private-agent

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: eval-findings.md
scripts/: eval_agent.py  eval_mlx_tools.py
src/private_agent/: __init__.py  agent.py  cli.py  conversation.py  menubar.py  router.py  voice.py
src/private_agent/tools/: __init__.py  _applescript.py  _dates.py  calendar.py  files.py  mail.py  reminders.py
tests/: test_agent.py  test_conversation.py  test_router.py  test_tools.py  test_voice.py
