[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-agent"
version = "0.1.0"
description = "A private, on-device agentic assistant for macOS built on Apple's Foundation Models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rajan Sharma" }]
dependencies = [
    "langchain-apple-foundation-models",
    "rumps",
    "mlx-lm",
    "transformers>=5.7.0,<5.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
private-agent = "private_agent.cli:main"
private-agent-menubar = "private_agent.menubar:main"

[tool.hatch.build.targets.wheel]
packages = ["src/private_agent"]
